@@ -269,3 +269,36 @@ libcmis_ObjectTypePtr libcmis_session_getType(
     }
     return type;
 }
+
+libcmis_vector_object_type_Ptr libcmis_session_getBaseTypes(
+        libcmis_SessionPtr session,
+        libcmis_ErrorPtr error )
+{
+    libcmis_vector_object_type_Ptr types = NULL;
+    if ( session != NULL && session->handle != NULL )
+    {
+        try
+        {
+            vector< libcmis::ObjectTypePtr > handles = session->handle->getBaseTypes( );
+            types = new libcmis_vector_object_type( );
+            types->handle = handles;
+        }
+        catch ( const libcmis::Exception& e )
+        {
+            if ( error != NULL )
+            {
+                error->message = strdup( e.what() );
+                error->type = strdup( e.getType().c_str() );
+            }
+        }
+        catch ( const bad_alloc& e )
+        {
+            if ( error != NULL )
+            {
+                error->message = strdup( e.what() );
+                error->badAlloc = true;
+            }
+        }
+    }
+    return types;
+}
