@@ -67,3 +67,4 @@
 
   * Completely removed the dependency on InMemory server for unit tests
   * Minimized the number of HTTP requests sent by SessionFactory::createSession
+  * Added Session::getBaseTypes()
